  sort order doesn't change. (RFB)
- desk/deskmain.c: Code cleanup: eliminate duplicate/unused #defines. (RFB)

2014-10-24
- desk/deskbind.h desk/deskdir.c desk/deskfun.c desk/deskmain.c desk/desksupp.c
  desk/deskwin.c desk/deskwin.h: Fix bug: a topped window did not always stay
  topped when the view type or sort sequence changed. (RFB)
- desk/deskmain.c desk/deskmain.h desk/desksupp.c desk/deskwin.c: Code
  cleanup: remove useless global variable 'gl_whsiztop'. (RFB)
- desk/deskmain.c: Code cleanup: remove unused local variables 'gl_defdrv'
  and 'gl_idsiztop'. (RFB)

2014-10-25
- aes/optimopt.h aes/optimopt.S include/obdefs.h: Code optimisation: make
  r_get() static inline C code, saves time and space. (RFB)
- include/obdefs.h: Replace r_set() macro with static inline function
  (safer). (RFB)

2014-10-26
- aes/gemgraf.c aes/gemoblib.c aes/optimopt.h aes/optimopt.S desk/deskgraf.c:
  Code optimisation: replace LBWMOV() with expand_string(). (RFB)
- Makefile aes/large.S aes/optimopt.h: Removed LBWMOV(), no longer used. (RFB)

2014-10-27
- optimopt.S: Fix error when assembling for Coldfire. (RFB)

2014-10-31
- vdi/vdi_tblit.S vdi/vdi_tblit_cf.S: Scaled text now looks exactly like
  that produced by TOS 1.04. (RFB)

2014-11-02
- vdi/vdi_text.c: Code optimisation: make act_siz() smaller & faster. (RFB)
- vdi/vdi_text.c: Fix latent bugs in trnsfont() function [unused in practice]. (RFB)

2014-11-06
- vdi/vdi_tblit.S vdi/vdi_tblit_cf.S: Fix bug: VDI/LineA text blit was not
  clipped to screen. (RFB)

2014-11-10
- bios/fnt_st_6x6.c: Restored original English 6x6 system font: all standard
  ST glyphs are now available. (RFB)

2014-11-11
- desk/deskwin.c: Increase horizontal spacing for window icons in low,
  medium, & double-line resolutions. (RFB)
- desk/deskapp.c desk/deskbind.h desk/deskwin.c: Use common definitions
  for both window & desktop icon spacing. (RFB)
- desk/deskapp.c: Simplify calculation of desktop icon spacing. (RFB)